--- a/docs/Exercises.adoc
+++ b/docs/Exercises.adoc
@@ -89,7 +89,7 @@ Now https://github.com/holyjak/fulcro-intro-wshop/blob/4992e994cb51bef46d6aaca5f
 
 4. In `ui.cljs`, under _Exercise 3.4_, execute the form `(binding ...)` and explore te output in Shadow Inspect - pay attention to the metadata maps `^{...}` preceding some query vectors.
 
-[#eql-primer]**EQL Primer**: An EQL query includes 1) _properties_ such as `:list/label`, 2) _joins_ of the form `{<property or ident> <query>}`, 3) _idents_ such as `[:item/id 1]` to ask for the data of the entity with that ident (and we can again use a join to precise what data).
+[#eql-primer]**EQL Primer**: An EQL query includes 1) _properties_ (a.k.a. attributes) such as `:list/label`, 2) _joins_ of the form `{<property or ident> <query>}`, 3) _idents_ such as `[:item/id 1]` to ask for the data of the entity with that ident (and we can again use a join to precise what data).
 
 LESSON: Components declare their data needs using `:query`, listing the properties they want. They _join_ in the query of each child using `get-query` to include the child's needs and thus to specify what properties of a nested data entity to include. The query also includes metadata that Fulcro needs for its processing.
 
@@ -139,13 +139,13 @@ Remember that any "request for a change" passes through the "asynchronous" trans
 
 1. In Fulcro Inspect, open the _Transactions_ tab. You should see a single transaction there, a [.underline]#LOAD#, and its EQL query. Explore the query. +
 Tip: If you do not see the transaction then try to hard-reload the browser tab.
-2. Click on the transaction (i.e. mutation) to see its details. Notice that the transaction is simply data, of the form `(<fully qualified symbol> {options...})`. Let's explore the details of its query. +
+2. Click on the transaction to see its details. Notice that the transaction is simply data, of the form `(<fully qualified symbol> {options...})`. Let's explore the details of its query. +
    Note: Sadly, the _Diff added_ / _Diff removed_ does not work in the current version of Fulcro Inspect, so ignore it.
 3. Open Fulcro Inspect's _Network_ tab (not the browser's!). You should see a single _Request_ with the load's query. Click it to see its details and the _Response_ and notice how the response data tree mirrors the EQL query.
-4. Now click the _[Send to query]_ button next to the Response in the details, which will send you to the _EQL_ tab. Once there, press also the _[(Re)load Pathom Index]_ button to the very right (for autocompletion) and then the _[Run EQL]_ button next to it. Here we can play with EQL queries that the backend can answer.
+4. Now click the _[Send to query]_ button next to the Request in the details, which will send you to the _EQL_ tab. Once there, press also the _[(Re)load Pathom Index]_ button to the very right (for autocompletion) and then the _[Run EQL]_ button next to it. Here we can play with EQL queries that the backend can answer.
 5. Play with the query. Delete some attributes (keywords), add a made-up attribute and run it again. Replace the `{:list/items ...}` join with just the plain `:list/items` attribute and re-run^1^. (Note: The data is returned primarily by the https://github.com/holyjak/fulcro-intro-wshop/blob/37c467a3ad69598c37034ad1eb372d31b5be91b2/src/fulcro_todomvc/server.clj#L100[`list-resolver`].)
 6. Review the <<eql-primer,EQL Primer>> above
-7. Change the query to the ident query `[[:item/id 1]]`. What do you get back?
+7. Replace the whole query with the ident query `[[:item/id 1]]`. What do you get back?
 8. Change the plain ident query to a join, to specify the details of what you want from the item, run. (See ^2^ below for help.)
 9. [Optional] Open the _Index Explorer_ tab and click its _[Load index]_ button. Then collapse the _▼ Attributes_ section so that you will see the _Resolvers_ and click e.g. the `.../list-resolver`. Here you can see all the resolvers defined on the server, what input they need, and what attributes they can output.
 
@@ -159,13 +159,13 @@ LESSON: EQL queries are used both to turn data from the Client DB into a props t
 In the previous exercise we have observed the _effect_ of the application loading its data. Now we will trigger the load ourselves from the code, in the same manner that the application https://github.com/holyjak/fulcro-intro-wshop/blob/main/src/fulcro_todomvc/main.cljs#L13[does in its startup code].
 
 1. Go to `ui.cljs` and evaluate the `df/load!` form marked _Exercise 7.1_ +
-   (Note: df/load! is just a helper function that eventually transacts a mutation)
+   (Note: df/load! is just a helper function that eventually transacts a Fulcro mutation (the Fulcro and Pathom concept of a mutation diverge slightly and not all F. mutations are P. mutations but let's ignore that for now))
 2. Notice that it only returns a uuid of the submitted transaction, which is executed asynchronously
-3. Also notice that we pass it the ident of the thing we want to load and a component - internally, Fulcro will `(comp/get-query <the component>)`, and this is the query we can see sent to the backend.
+3. Also notice that we pass it the ident of the thing we want to load and a component - internally, Fulcro will call `(comp/get-query <the component>)`
 4. Check that you can see the transaction in the Fulcro Inspect _Transactions_ tab and explore the request and response in its _Network_ tab.
  * Notice that the ident and the query of the component that you supplied to `df/load!` have been combined into a join query - which the backend can resolve because it https://github.com/holyjak/fulcro-intro-wshop/blob/0fbae263cef4a5a8e0c7b2d770fa544771576135/src/fulcro_todomvc/server.clj#L111[has the `list-resolver`] that takes a `:list/id` and returns its data
-5. Go to _Fulcro Inspect - DB_ and expand `:list/id` to verify the list `2` has been added there. Then expand `:item/id` to verify that the item `99` has also been added there.
-6. Notice that Fulcro has placed each _data entity_ - both list and item - into their correct "tables" (`:list/id` and `:item/id`, respectively) and that the list links to the item using its ident. I.e. Fulcro has normalized the incoming data tree into the Client DB's "entity tables". That is only possible because both `TodoList` and `TodoItem` declare their `:ident` and thanks to the metadata linking each (sub)query to the component it comes from:
+5. Go to _Fulcro Inspect - DB_ and expand `:list/id` to verify the list `2` has been added there. Then expand `:item/id` to verify that the item `99` has also been added
+6. Notice that Fulcro has placed each _data entity_ into its correct "table", i.e. the list into `:list/id` and the item into `:item/id`, and that the list links to the item using its ident. I.e. Fulcro has https://rdbms.ca/database/normalization.html[_normalized_] the incoming data tree into the Client DB's "entity tables". That is only possible because both `TodoList` and `TodoItem` declare their `:ident` and thanks to the metadata linking each (sub)query to the component where it originates:
 +
 ```clojure
 (defsc TodoItem [_ _]
@@ -177,21 +177,21 @@ In the previous exercise we have observed the _effect_ of the application loadin
    :query [:list/id :list/title {:list/items (get-query TodoItem)} ...]}
   ...)
 ```
-7. At the top left of the _DB_ tab, click on the `<` next to the slider a few times, until the list 2 and item 99 disappear from the DB. This way you can go back and forward in the history (and the UI, since it will always reflect the DB state - though there is nothing to see now).
+7. At the top left of the _DB_ tab, click on the `<` next to the slider a few times, until the list 2 and item 99 disappear from the DB. This way you can go back and forward in the history (and the UI, since it will always reflect the DB state - though there is no change to see in this case).
 
-LESSON: Load targets a backend resolver by providing the inputs it responds to. It includes a component's query to request a particular subset of the available data and its (and children's) ident to normalize the data into the Client DB. You can use the DB view to go back in history and look at the data and UI at any prior point.
+LESSON: Load targets a backend resolver by providing the inputs it responds to. It includes a component's query to request a particular subset of the available data and uses the component's (and children's) ident to normalize the data into the Client DB. You can use the DB view to go back in history and look at the data and UI at any prior point in time.
 
 ### 8. Changing local and remote data with mutations
 
-To change state either in the frontend or in the backend, you "transact" (submit to the transaction subsystem) a mutation. A mutation is just data, namely the list `(<namespaced symbol> {<parameter key-value pairs>})`. You can register a "handler" for that symbol both on the frontend and backend using the Fulcro/Pathom `defmutation` macros. Let's trigger a mutation and explore it.
+To change state either in the frontend or in the backend, you "transact" (submit to the transaction subsystem) a mutation. A mutation is just data, namely a list of `(<namespaced symbol> {<parameter key-value pairs>})`. You can register a "handler" for that symbol both on the frontend and backend using the Fulcro/Pathom `defmutation` macros. Let's trigger a mutation and explore it.
 
 1. Mark "Item 3" as complete by clicking to the left of it. This essentially triggers this DOM event handler (simplified):
 +
 ```clojure
-:onChange #(comp/transact! this [(api/todo-check {:id (:item/id props)})])
+:onChange #(comp/transact! this [(fulcro-todomvc.api/todo-check {:id (:item/id props)})])
 ```
 +
-Note: The `todo-check` call simply returns a list of its name and parameters, as you will soon see
+Note: The `todo-check` call simply returns the surrounding list, quoted
 2. Look at the transaction in the _Transactions_ tab and verify it indeed is a list
 3. Explore it in Fulcro Inspect's _Network_ tab
 4. Read the https://github.com/holyjak/fulcro-intro-wshop/blob/d6fd2965af36046e9ffe8279b521fec6e3151fc5/src/fulcro_todomvc/api.cljs#L47[frontend Fulcro defmutation] code. The `action` is performed to handle the mutation on the frontend while `(remote [_] true)` instructs Fulcro to also send the mutation to the backend (as we have seen in the Network tab)
